manifest.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: example

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: example
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx
          resoures:
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: html
          configMap:
            name: nginx-config
        - name: conf
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: example
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-chore
  namespace: example
spec:
  selector:
    matchLabels:
      app: acme-chore
  replicas: 1
  template:
    metadata:
      labels:
        app: acme-chore
    spec:
      containers:
        - name: acme-chore
          image: traefik/whoami
          resoures:
          ports:
            - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: acme-chore
#   namespace: example
#   labels:
#     app: acme-chore
# spec:
#   type: ClusterIP
#   selector:
#     app: acme-chore
#   ports:
#     - port: 44380
#       targetPort: 8080
#       protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: acme-chore
  namespace: example
  labels:
    app: acme-chore
spec:
  type: ExternalName
  selector:
    app: acme-chore
  externalName: 172-31-0-11.nip.io

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k3s.dial.mywire.org
        - www.dial.mywire.org
      secretName: web-tls-cert
  rules:
    - host: "k3s.dial.mywire.org"
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: acme-chore
                port:
                  number: 44380
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: "www.dial.mywire.org"
      http:
        paths:
          - path: /.well-known
            pathType: Prefix
            backend:
              service:
                name: acme-chore
                port:
                  number: 44380
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
